--- a/index.html
+++ b/index.html
@@ -2,9 +2,342 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-$END$
+    <nav class="navbar navbar-expand-sm navbar-dark bg-info">
+        <div class="container">
+            <a href="" class="navbar-brand text-white font-weight-bold">Logo</a>
+            <button type="button" class="navbar-toggler border" data-toggle="collapse" data-target="#menu">
+                <span class="navbar-toggler-icon "></span>
+            </button>
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="navbar-nav ml-auto">
+                    <li><a href="" class="nav-link text-white">Home</a> </li>
+                    <li><a href="" class="nav-link text-white">About</a> </li>
+                    <li class="dropdown">
+                        <a href="" class="nav-link text-white dropdown-toggle" data-toggle="dropdown">Service</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="" class="dropdown-item">Service1</a> </li>
+                            <li><a href="" class="dropdown-item">Service2</a> </li>
+                            <li><a href="" class="dropdown-item">Service3</a> </li>
+                        </ul>
+                    </li>
+                    <li><a href="" class="nav-link text-white">Gallery</a> </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="carousel slide" data-ride="carousel" data-interval="1800" id="slider">
+        <ol class="carousel-indicators">
+            <li data-target="#slider" data-slide-to="0" class="active"></li>
+            <li data-target="#slider" data-slide-to="1"></li>
+            <li data-target="#slider" data-slide-to="2"></li>
+
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/s1.png" alt="" class="w-100 h-550"/>
+                <div class="carousel-caption">
+                    <h3>This is caption heading.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At facilis nobis quam sit soluta? Alias earum eum, necessitatibus quasi velit vitae. Accusamus blanditiis corporis, earum excepturi explicabo quam totam voluptas!</p>
+                    <a href="" class="btn btn-success">Read More</a>
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/s2.jpg" alt="" class="w-100 h-550"/>
+                <div class="carousel-caption">
+                    <h3>This is caption heading.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At facilis nobis quam sit soluta? Alias earum eum, necessitatibus quasi velit vitae. Accusamus blanditiis corporis, earum excepturi explicabo quam totam voluptas!</p>
+                    <a href="" class="btn btn-success">Read More</a>
+
+                </div>
+            </div>
+           
+            <div class="carousel-item">
+                <img src="img/s3.jpg" alt="" class="w-100 h-550"/>
+                <div class="carousel-caption">
+                    <h3>This is caption heading.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At facilis nobis quam sit soluta? Alias earum eum, necessitatibus quasi velit vitae. Accusamus blanditiis corporis, earum excepturi explicabo quam totam voluptas!</p>
+                    <a href="" class="btn btn-success">Read More</a>
+
+                </div>
+            </div>
+            </div>
+          </div>
+
+
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>this is a card Heading</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem commodi consequuntur cupiditate dicta doloribus facere minus necessitatibus, nihil nisi quibusdam quidem quo ratione repellendus rerum soluta suscipit voluptates voluptatum. Exercitationem.</p>
+                            <a hre="" class="btn btn-success">Read More</a>
+                        </div>
+                        <div class="card-footer">
+                            <p>This is card footer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>this is a card Heading</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem commodi consequuntur cupiditate dicta doloribus facere minus necessitatibus, nihil nisi quibusdam quidem quo ratione repellendus rerum soluta suscipit voluptates voluptatum. Exercitationem.</p>
+                            <a hre="" class="btn btn-success">Read More</a>
+                        </div>
+                        <div class="card-footer">
+                            <p>This is card footer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>this is a card Heading</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem commodi consequuntur cupiditate dicta doloribus facere minus necessitatibus, nihil nisi quibusdam quidem quo ratione repellendus rerum soluta suscipit voluptates voluptatum. Exercitationem.</p>
+                            <a hre="" class="btn btn-success">Read More</a>
+                        </div>
+                        <div class="card-footer">
+                            <p>This is card footer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="py-5 bg-secondary">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>This is  a heading</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto atque consequuntur cumque distinctio est fugit id in, ipsa, iure laboriosam maxime neque nisi nulla perspiciatis quaerat reprehenderit tenetur, veritatis.</p>
+                            <a href="" class="btn btn-outline-success">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>This is  a heading</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto atque consequuntur cumque distinctio est fugit id in, ipsa, iure laboriosam maxime neque nisi nulla perspiciatis quaerat reprehenderit tenetur, veritatis.</p>
+                            <a href="" class="btn btn-outline-success">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>This is  a heading</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium architecto atque consequuntur cumque distinctio est fugit id in, ipsa, iure laboriosam maxime neque nisi nulla perspiciatis quaerat reprehenderit tenetur, veritatis.</p>
+                            <a href="" class="btn btn-outline-success">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--    Third Section-->
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card card-body">
+                        <h3 class="text-center">This is a content</h3>
+                        <hr/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, laborum qui. Ab atque delectus deleniti dolores id iure laboriosam molestias mollitia neque optio perferendis provident, quod repudiandae similique voluptas voluptatibus!</p>
+                        <a href="" class="btn btn-outline-success">Read More</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-body">
+                        <h3 class="text-center">This is a content</h3>
+                        <hr/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, laborum qui. Ab atque delectus deleniti dolores id iure laboriosam molestias mollitia neque optio perferendis provident, quod repudiandae similique voluptas voluptatibus!</p>
+                        <a href="" class="btn btn-outline-success">Read More</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card card-body">
+                        <h3 class="text-center">This is a content</h3>
+                        <hr/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, laborum qui. Ab atque delectus deleniti dolores id iure laboriosam molestias mollitia neque optio perferendis provident, quod repudiandae similique voluptas voluptatibus!</p>
+                        <a href="" class="btn btn-outline-success">Read More</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+<!--    Fourth section-->
+    <section class="py-5 bg-secondary">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card bg-dark text-white">
+                        <div class="card-header">
+                            <h3>This is heading</h3>
+                        </div>
+                        <div class="card-body">
+                            <h3>This is heading</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, magnam, nostrum? Ab eaque, error fuga impedit inventore modi obcaecati odit officia, perspiciatis quaerat reiciendis tempora tempore ut voluptatem voluptates? Harum.</p>
+                            <a href="" class="btn btn-outline-success">Read More</a>
+                        </div>
+                   </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card bg-dark text-white">
+                        <div class="card-header">
+                            <h3>This is heading</h3>
+                        </div>
+                        <div class="card-body">
+                            <h3>This is heading</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, magnam, nostrum? Ab eaque, error fuga impedit inventore modi obcaecati odit officia, perspiciatis quaerat reiciendis tempora tempore ut voluptatem voluptates? Harum.</p>
+                            <a href="" class="btn btn-outline-success">Read More</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card bg-dark text-white">
+                        <div class="card-header">
+                            <h3>This is heading</h3>
+                        </div>
+                        <div class="card-body">
+                            <h3>This is heading</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, magnam, nostrum? Ab eaque, error fuga impedit inventore modi obcaecati odit officia, perspiciatis quaerat reiciendis tempora tempore ut voluptatem voluptates? Harum.</p>
+                            <a href="" class="btn btn-outline-success">Read More</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!--    Fifth Section-->
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="img/p1.jpg" alt="" class="card-img-top h-250" />
+                        <div class="card-body">
+                            <h3 class="card-title">Smart Shirt</h3>
+                            <hr/>
+                            <p class="card-text">This is very nice product.You can purchase it.Thank You.</p>
+                            <p class="card-text">
+                                <del>Tk.4400</del><span class="font-weight-bold"> Tk.3400</span>
+                            </p>
+                            <hr/>
+                            <a href="" class="btn btn-outline-success">Detail</a>
+                            <a href="" class="btn btn-outline-warning float-right">Add to Cart</a>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="img/p2.jpg" alt="" class="card-img-top h-250" />
+                        <div class="card-body">
+                            <h3 class="card-title">Smart Shirt</h3>
+                            <hr/>
+                            <p class="card-text">This is very nice product.You can purchase it.Thank You.</p>
+                            <p class="card-text">
+                                <del>Tk.4400</del><span class="font-weight-bold"> Tk.3400</span>
+                            </p>
+                            <hr/>
+                            <a href="" class="btn btn-outline-success">Detail</a>
+                            <a href="" class="btn btn-outline-warning float-right">Add to Cart</a>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="img/p3.jpg" alt="" class="card-img-top h-250" />
+                        <div class="card-body">
+                            <h3 class="card-title">Smart Shari</h3>
+                            <hr/>
+                            <p class="card-text">This is very nice product.You can purchase it.Thank You.</p>
+                            <p class="card-text">
+                                <del>Tk.4400</del><span class="font-weight-bold float-right"> Tk.3400</span>
+                            </p>
+                            <hr/>
+                            <a href="" class="btn btn-outline-success">Detail</a>
+                            <a href="" class="btn btn-outline-warning float-right">Add to Cart</a>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+<!--    prothomalo-->
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="card">
+
+                        <img src="img/a1.jpg" alt="" class="card-img-top" />
+                        <div class="card-body">
+                            <h5 class="card-title font-weight-bold">১১ ঘণ্টা উড়োজাহাজের চাকায় চড়ে নেদারল্যান্ডসে</h5>
+                            <p class="">দক্ষিণ আফ্রিকার জোহানেসবার্গ থেকে নেদারল্যান্ডসের আমস্টারডামে যেতে একটি কার্গো ফ্লাইটের সময় লাগে গড়ে ১১ ঘণ্টা। এই ফ্লাইট আবার কেনিয়ার নাইরোবিতে যাত্রাবিরতি দেয়। এরপরও এক ব্যক্তি একটি উড়োজাহাজের চাকায় চড়ে পাড়ি দিলেন দক্ষিণ আফ্রিকা থেকে নেদারল্যান্ডসে।</p>
+                            <p class="card-text text-muted">51 minutes ago</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card border-0">
+                        <div class="row no-gutters">
+                            <div class="col-4">
+                                <img src="img/a2.jpg" alt="" class="card-img-top w-100 h-157" />
+                            </div>
+                            <div class="col-8">
+                                <div class="card-body pt-0 pl-0 pb-0">
+                                    <h5 clss="card-title font-weight-bold mb-1">অসলোতে পশ্চিমা কর্মকর্তাদের সঙ্গে আলোচনায় তালেবান</h5>
+                                    <p class="card-text p-size mb-1">নরওয়ের অসলোতে পশ্চিমা কর্মকর্তাদের সঙ্গে আলোচনা করছেন আফগান তালেবানের সদস্যরা। আফগানিস্তানের নিয়ন্ত্রণ নেওয়ার পর এই প্রথম ইউরোপে আলোচনা করছে তালেবান। আজ সোমবার বিবিসি অনলাইনের প্রতিবেদনে এসব তথ্য জানানো হয়।</p>
+                                    <p class="card-text text-muted p-size mt-0">51 minites ago</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
 </html>
